# SRE-Bootcamp

./: .gitignore  README.md  manage.py  pyproject.toml
sms/: settings.py  urls.py
student/: apps.py  models.py  urls.py
student/api/: serializers.py  views.py
student/migrations/: 0001_initial.py  0002_alter_student_created_at_alter_student_updated_at.py
